# libkeepass2pp

./: .gitignore  AUTHORS  Makefile.am  configure.ac  keepass2pp.pc.in
include/: Makefile.am
include/libkeepass2pp/: compositekey.h  cryptorandom.h  database.h  databasemodel.h  groupeditor.cpp  groupeditor.h  groupeditor.ui  icon.h  links.h  pipeline.h  platform.h  util.h  wrappers.h
src/: Makefile.am  compositekey.cpp  cryptorandom.cpp  database.cpp  database_file.cpp  links.cpp  pipeline.cpp  platform_other.cpp  platform_w32.cpp  util.cpp  wrappers.cpp
tests/: Makefile.am  TestDatabase.kdbx  TestDatabase.key  compositekey.sh  compositekey.test.cpp  cryptorandom.sh  cryptorandom.test.cpp  pipeline.input  pipeline.sh  pipeline.test.cpp
