libkeepass2ppdir = $(includedir)/libkeepass2pp

libkeepass2pp_HEADERS = libkeepass2pp/wrappers.h \
                        libkeepass2pp/pipeline.h \
                        libkeepass2pp/links.h \
                        libkeepass2pp/icon.h \
                        libkeepass2pp/database.h \
                        libkeepass2pp/databasemodel.h \
                        libkeepass2pp/platform.h \
                        libkeepass2pp/compositekey.h \
                        libkeepass2pp/util.h \
                        libkeepass2pp/cryptorandom.h

nodist_libkeepass2pp_HEADERS = libkeepass2pp/keepass2pp_config.h
